test/files/neg/t5355.scala
class A {
  type Num = {
    def bippy(n: Num): Num
  }
}

class B {
  trait Num {
    def dingo(n: Num): Num
  }
}
